2007-05-31  Akim Demaille  <demaille@gostai.com>

	Fix typo
	* src/parser/bison/ugrammar.y: here.

2007-05-31  Akim Demaille  <demaille@gostai.com>

	Let braces be braces, and brackets be brackets
	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y
	(TOK_LBRACKET, TOK_RBRACKET, TOK_LSBRACKET, TOK_RSBRACKET):
	Rename as...
	(TOK_LBRACE, TOK_RRACE, TOK_LBRACKET, TOK_RBRACKET): these.

2007-05-31  Akim Demaille  <demaille@gostai.com>

	Clarify the scanning of numbers
	* src/parser/bison/utoken.l (RETURN_STR_TOKEN, RETURN_IVAL_TOKEN)
	(RETURN_FVAL_TOKEN): Rename as...
	(RETURN_STR, RETURN_IVAL, RETURN_FVAL): these.
	(RETURN_NUM, RETURN_FLAG, RETURN_FLAG_TIME): Remove.
	Replace the last two with RETURN_IVAL instead of floats as before.
	(RETURN_VALUE): New, used to implement others.
	* src/parser/bison/ugrammar.y: Be sure to receive the flags as
	integers, not floats.  This is not correct yet, but less incorrect.

2007-05-31  Akim Demaille  <demaille@gostai.com>

	* src/ast/ast.yml: Comment changes.

2007-05-29  Akim Demaille  <demaille@gostai.com>

	* src/parser/bison/utoken.l, src/parser/bison/ugrammar.y:
	Use Symbols for identifiers.

2007-05-29  Akim Demaille  <demaille@gostai.com>

	Remove memcheck from the parser
	* src/parser/bison/ugrammar.y (memcheck): Remove definitions and
	uses.
	Declare private functions as static.
	Comment some of them out, now that the compiler sees they're not used.
	(new_bin): Simplify: the UParser is no longer needed.

2007-05-29  Akim Demaille  <demaille@gostai.com>

	parameter -> argument
	* src/parser/bison/ugrammar.y: Use argument when more appropriate
	than parameter.

2007-05-28  mefyl  <mefyl@lrde.epita.fr>

	Add print-visitor generator.
	* dev/ast-print-visitor-gen: New. Printer generator.
	* dev/ast.py: Accept 'printer' attribute.
	* src/ast/Makefile.am: Add files.
	* src/ast/ast.yml: Add a few printer.
	* src/ast/print-visitor.cc,
	* src/ast/print-visitor.hh: New. Generated files.
